<resources>
    <string name="app_name">WeatherForecast</string>
    <string name="API_KEY" translatable="false">312fa029f932e45a1050f7cbac5bcc2d</string>
    <string name="humidity">Humidity %d</string>
    <string name="term_max_term_min" translatable="false">%d°/%d°</string>
    <string name="d_day_forecast">Forecast next %d days</string>
    <string name="appwidget_text" translatable="false">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="time_update">(Updated at: %s)</string>
    <string name="sunrise">Sunrise</string>
    <string name="wind">Wind</string>
    <string name="sunset">Sunset</string>
</resources>