<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/transparent"
    android:padding="@dimen/widget_margin"
    android:theme="@style/ThemeOverlay.WeatherForecast.AppWidgetContainer">

    <LinearLayout
        android:layout_margin="3dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_white_30">

        <RelativeLayout
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:drawableStart="@drawable/ic_baseline_location_on_18_white"
                android:drawablePadding="3dp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_toStartOf="@id/imvRefresh"
                android:id="@+id/tvLocationName"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:textColor="@color/white"/>

            <ImageView
                android:scaleType="center"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"
                android:id="@+id/imvRefresh"
                android:layout_width="60dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_baseline_refresh_white_24"/>

        </RelativeLayout>

        <LinearLayout
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/tvWeatherName"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:text="Sunny"
                android:textColor="@color/white"/>

            <ImageView
                android:id="@+id/imvWeather"
                android:layout_width="44dp"
                android:layout_height="44dp"
                android:src="@drawable/sunny_light"
                android:scaleType="fitXY"/>

            <TextView
                android:textAlignment="center"
                android:id="@+id/tvTimeUpdate"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:text="@string/time_update"
                android:textColor="@color/white"/>

        </LinearLayout>

        <LinearLayout
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/tvTemperature"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="38sp"
                android:text="32"
                android:textColor="@color/white"/>
            <TextView
                android:layout_marginStart="4dp"
                android:layout_marginEnd="2dp"
                android:gravity="top"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="o"
                android:textSize="20sp"
                android:textColor="@color/white"/>
            <TextView
                android:gravity="top"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="C"
                android:textSize="25sp"
                android:textColor="@color/white"/>
        </LinearLayout>

        <LinearLayout
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:src="@drawable/sunrise_white"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sunrise"
                    android:textColor="@color/white"
                    android:textSize="13sp"/>

                <TextView
                    android:id="@+id/tvSunriseTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="15sp"/>

            </LinearLayout>

            <LinearLayout
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:src="@drawable/windy_light"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/wind"
                    android:textColor="@color/white"
                    android:textSize="13sp"/>

                <TextView
                    android:id="@+id/tvWind"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="15sp"/>

            </LinearLayout>

            <LinearLayout
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:src="@drawable/sunset_white"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sunset"
                    android:textColor="@color/white"
                    android:textSize="13sp"/>

                <TextView
                    android:id="@+id/tvSunsetTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textColor="@color/white"
                    android:textSize="15sp"/>

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:id="@+id/tvHumidity"
            android:layout_marginTop="15dp"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/humidity"
            android:textColor="@color/white"
            android:textSize="15sp"/>

    </LinearLayout>

</RelativeLayout>