<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    android:background="@color/main"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_search_24"
            android:background="@null"
            android:layout_gravity="end"
            android:layout_marginEnd="20dp"/>

    </androidx.appcompat.widget.Toolbar>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/refreshMain"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:paddingTop="10dp"
                android:paddingBottom="20dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:padding="20dp"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_white"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginBottom="2dp"
                    android:layout_marginEnd="20dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <com.elyeproj.loaderviewlibrary.LoaderTextView
                            android:drawableStart="@drawable/ic_baseline_location_on_18_white"
                            android:drawablePadding="3dp"
                            android:layout_alignParentStart="true"
                            android:layout_centerVertical="true"
                            android:layout_toStartOf="@id/imvRefresh"
                            app:use_gradient="true"
                            android:id="@+id/tvLocationName"
                            android:textStyle="bold"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="15sp"
                            android:textColor="@color/white"/>

                        <ImageView
                            android:scaleType="center"
                            android:layout_centerVertical="true"
                            android:layout_alignParentEnd="true"
                            android:id="@+id/imvRefresh"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:src="@drawable/ic_baseline_refresh_24"/>

                    </RelativeLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <com.elyeproj.loaderviewlibrary.LoaderTextView
                            app:use_gradient="true"
                            android:id="@+id/tvWeatherName"
                            android:layout_gravity="center"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="15sp"
                            android:text="Sunny"
                            android:textColor="@color/white"/>

                        <ImageView
                            android:layout_marginStart="5dp"
                            android:id="@+id/imvWeather"
                            android:layout_width="32dp"
                            android:layout_height="32dp"
                            android:src="@drawable/icon_01n"
                            android:scaleType="fitXY"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <com.elyeproj.loaderviewlibrary.LoaderTextView
                            app:use_gradient="true"
                            android:id="@+id/tvTemperature"
                            android:textStyle="bold"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="38sp"
                            android:text="32"
                            android:textColor="@color/white"/>
                        <TextView
                            android:layout_marginStart="4dp"
                            android:layout_marginEnd="2dp"
                            android:gravity="top"
                            android:textStyle="bold"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:text="o"
                            android:textSize="20sp"
                            android:textColor="@color/white"/>
                        <TextView
                            android:gravity="top"
                            android:textStyle="bold"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:text="C"
                            android:textSize="25sp"
                            android:textColor="@color/white"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:gravity="center"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="28dp"
                                android:layout_height="28dp"
                                android:src="@drawable/sunrise_white"/>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/sunrise"
                                android:textColor="@color/white"
                                android:textSize="13sp"/>

                            <com.elyeproj.loaderviewlibrary.LoaderTextView
                                app:use_gradient="true"
                                android:id="@+id/tvSunriseTime"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textColor="@color/white"
                                android:textSize="15sp"/>

                        </LinearLayout>

                        <LinearLayout
                            android:gravity="center"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="28dp"
                                android:layout_height="28dp"
                                android:src="@drawable/windy_light"/>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/wind"
                                android:textColor="@color/white"
                                android:textSize="13sp"/>

                            <com.elyeproj.loaderviewlibrary.LoaderTextView
                                app:use_gradient="true"
                                android:id="@+id/tvWind"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textColor="@color/white"
                                android:textSize="15sp"/>

                        </LinearLayout>

                        <LinearLayout
                            android:gravity="center"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="28dp"
                                android:layout_height="28dp"
                                android:src="@drawable/sunset_white"/>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/sunset"
                                android:textColor="@color/white"
                                android:textSize="13sp"/>

                            <com.elyeproj.loaderviewlibrary.LoaderTextView
                                app:use_gradient="true"
                                android:id="@+id/tvSunsetTime"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text=""
                                android:textColor="@color/white"
                                android:textSize="15sp"/>

                        </LinearLayout>

                    </LinearLayout>

                    <TextView
                        android:id="@+id/tvHumidity"
                        android:layout_marginTop="20dp"
                        android:textAlignment="center"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Humidity"
                        android:textColor="@color/white"
                        android:textSize="15sp"/>

                </LinearLayout>

                <TextView
                    android:id="@+id/tvTitleNumberDayForecast"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:textStyle="bold"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Forecast next 5 days"
                    android:textSize="15sp"
                    android:textColor="@color/dark_blue"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvWeatherForecast"
                    android:overScrollMode="never"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    tools:listitem="@layout/item_weather_forecast"/>

            </LinearLayout>
        </androidx.core.widget.NestedScrollView>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

</LinearLayout>